k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nammu-os-service
  namespace: nammu-os
  labels:
    app: nammu-os
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nammu-os
